--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                 </div>
               </div>
             </div>
+            <div class="finished">Задание выполнено!</div>
           </div>
         </section>
       </main>
